/**
 * JavaScript Typed Array, ArrayBuffer, and DataView Support for Lambda
 *
 * Implements Int8Array, Uint8Array, Int16Array, Uint16Array,
 * Int32Array, Uint32Array, Float16Array, Float32Array, Float64Array,
 * ArrayBuffer, and DataView.
 *
 * Typed arrays are stored as Map objects with a sentinel marker,
 * using the same zero-overhead wrapper pattern as DOM nodes.
 */
#pragma once

#ifdef __cplusplus
extern "C" {
#endif

#include "../lambda.h"

typedef enum JsTypedArrayType {
    JS_TYPED_INT8,
    JS_TYPED_UINT8,
    JS_TYPED_INT16,
    JS_TYPED_UINT16,
    JS_TYPED_INT32,
    JS_TYPED_UINT32,
    JS_TYPED_FLOAT32,
    JS_TYPED_FLOAT64,
    JS_TYPED_UINT8_CLAMPED,
    JS_TYPED_BIGINT64,
    JS_TYPED_BIGUINT64,
    JS_TYPED_FLOAT16,
} JsTypedArrayType;

// ArrayBuffer: raw byte storage
typedef struct JsArrayBuffer {
    void* data;         // heap-allocated byte buffer
    int byte_length;    // total bytes
    int max_byte_length; // max bytes for resizable buffers
    bool detached;      // true after ArrayBuffer has been detached
    bool is_shared;     // true for SharedArrayBuffer
    bool resizable;     // true for ArrayBuffer(length, {maxByteLength})
} JsArrayBuffer;

// DataView: structured access into an ArrayBuffer
typedef struct JsDataView {
    JsArrayBuffer* buffer;  // backing ArrayBuffer
    int byte_offset;         // offset into buffer
    int byte_length;         // view byte length (ignored when length_tracking)
    uint64_t buffer_item;    // original ArrayBuffer Item for identity-preserving .buffer access
    bool length_tracking;    // Js54 P2: true when constructed without explicit byteLength —
                             // current byte_length re-derives from buffer->byte_length - byte_offset
                             // on every access so resizable-buffer views see live length.
} JsDataView;

typedef struct JsTypedArray {
    JsTypedArrayType element_type;   // typed-array element kind
    JsArrayBuffer* buffer;           // backing ArrayBuffer
    uint64_t buffer_item;            // original ArrayBuffer Item for identity-preserving .buffer access
    bool length_tracking;            // true when constructed from buffer without explicit length
    bool is_buffer;                  // true only for Node Buffer instances backed by Uint8Array storage
    ArrayNum* view;                  // ArrayNum descriptor over the same non-moving byte storage
} JsTypedArray;

typedef enum JsAtomicsOp {
    JS_ATOMICS_OP_ADD,
    JS_ATOMICS_OP_AND,
    JS_ATOMICS_OP_COMPARE_EXCHANGE,
    JS_ATOMICS_OP_EXCHANGE,
    JS_ATOMICS_OP_LOAD,
    JS_ATOMICS_OP_OR,
    JS_ATOMICS_OP_STORE,
    JS_ATOMICS_OP_SUB,
    JS_ATOMICS_OP_XOR,
} JsAtomicsOp;

// Sentinel markers for identifying typed arrays, array buffers, data views
extern char js_typed_array_marker;

// Core typed array operations
Item js_typed_array_new(int type_id, int length);
Item js_typed_array_new_from_buffer(int type_id, Item buffer_item, int byte_offset, int length);
Item js_typed_array_new_from_array(int type_id, Item source);
Item js_typed_array_get(Item ta, Item index);
Item js_typed_array_set(Item ta, Item index, Item value);
int  js_typed_array_length(Item ta);
int  js_typed_array_byte_length(Item ta);
int  js_typed_array_byte_offset(Item ta);
bool js_typed_array_is_out_of_bounds_item(Item ta);
Item js_typed_array_raw_get_item(JsTypedArray* ta, void* data, int index);
Item js_typed_array_fill(Item ta, Item value, int start, int end);
bool js_is_typed_array(Item val);
JsTypedArray* js_get_typed_array_ptr(Map* m);
void* js_typed_array_current_data_ptr(Item ta_item);
Item js_typed_array_subarray(Item ta, int start, int end, bool end_is_default);
Item js_typed_array_slice(Item ta, int start, int end);
Item js_typed_array_set_from(Item ta, Item source, int offset);
bool js_typed_array_raw_reverse(Item ta);
bool js_typed_array_raw_copy_reversed(Item dst, Item src);
bool js_typed_array_raw_copy_same_type(Item dst, Item src);
bool js_typed_array_raw_copy_within(Item ta, int target, int start, int count);
int js_typed_array_raw_index_of(Item ta, Item search_value, int from, int bound, bool reverse, bool same_value_zero);

// ArrayBuffer operations
Item js_arraybuffer_new(int byte_length);
Item js_arraybuffer_construct(Item length_arg);
Item js_arraybuffer_construct_resizable(Item length_arg, Item options_arg);
Item js_arraybuffer_wrap(JsArrayBuffer* ab);
bool js_is_arraybuffer(Item val);
JsArrayBuffer* js_get_arraybuffer_ptr_item(Item val);
int  js_arraybuffer_byte_length(Item val);
int  js_arraybuffer_max_byte_length(Item val);
bool js_arraybuffer_is_resizable(Item val);
Item js_arraybuffer_resize(Item val, Item new_length_item);
// Js54 P8: ArrayBuffer.prototype.transfer(newLength?) and transferToFixedLength(newLength?).
// Both create a new ArrayBuffer of newLength bytes (defaults to source.byteLength),
// copy min(srcByteLength, newLength) bytes, and detach the source.
Item js_arraybuffer_transfer(Item val, Item new_length_item, int argc);
Item js_arraybuffer_transfer_to_fixed_length(Item val, Item new_length_item, int argc);
Item js_arraybuffer_slice(Item val, int begin, int end);
Item js_arraybuffer_slice_items(Item val, Item begin_item, Item end_item, int argc);
bool js_arraybuffer_is_view(Item val);
Item js_arraybuffer_is_view_item(Item val);
void js_arraybuffer_detach(Item val);
bool js_arraybuffer_is_detached(Item val);

// SharedArrayBuffer
Item js_sharedarraybuffer_construct(Item length_arg);
Item js_sharedarraybuffer_construct_with_options(Item length_arg, Item options_arg);
bool js_is_sharedarraybuffer(Item val);
Item js_sharedarraybuffer_method(Item sab, Item method_name, Item* args, int argc);

// Atomics operations on SharedArrayBuffer-backed integer typed arrays
Item js_atomics_operation(int op, Item typed_array, Item index, Item value, Item replacement);
Item js_atomics_wait(Item typed_array, Item index, Item expected, Item timeout);
Item js_atomics_wait_async(Item typed_array, Item index, Item expected, Item timeout);
Item js_atomics_notify(Item typed_array, Item index, Item count);
Item js_atomics_is_lock_free(Item size);
void js_atomics_reset_waiters(void);
int  js_atomics_report_waiter_for_agent(int agent_slot, Item report_string);
bool js_atomics_report_waiter_ready(int waiter_id);
Item js_atomics_resolve_waiter_report(int waiter_id, Item report_string);
void js_atomics_agent_sleep(Item ms);
Item js_atomics_agent_monotonic_now(void);
void js_atomics_agent_leaving(int agent_slot);

// DataView operations
Item js_dataview_new(Item buffer, Item offset_item, Item length_item);
bool js_is_dataview(Item val);
JsDataView* js_get_dataview_ptr(Item val);
Item js_dataview_method(Item dv, Item method_name, Item* args, int argc);

// Smart constructor: dispatches based on argument type (number, ArrayBuffer, TypedArray, Array)
Item js_typed_array_construct(int type_id, Item arg, Item byte_offset, Item length, int argc);

// Returns the JS type name (e.g. "Uint8Array"), or NULL if not a typed array
const char* js_typed_array_type_name(Item val);

// ES §22.2.4.7 TypedArraySpeciesCreate — creates result using @@species constructor
Item js_typed_array_species_create(Item exemplar, int length);
Item js_typed_array_species_create_from_buffer(Item exemplar, Item buffer, int byte_offset, int length, bool length_tracking);

#ifdef __cplusplus
}
#endif
