classDiagram
    class Map {
        +TypeId type_id
        +uint8_t map_kind
        +void* type
        +void* data
        +int data_cap
    }
    class JsArrayBuffer {
        +void* data
        +int byte_length
        +int max_byte_length
        +bool detached
        +bool is_shared
        +bool resizable
    }
    class JsTypedArray {
        +JsTypedArrayType element_type
        +JsArrayBuffer* buffer
        +uint64_t buffer_item
        +bool length_tracking
        +bool is_buffer
        +ArrayNum* view
    }
    class ArrayNum {
        +uint8_t elem_type
        +void* data
        +int64_t length
        +int64_t extra
        +is_view / is_mutable_view
    }
    class ArrayNumShape {
        +void* base
        +int64_t offset
        +dims / strides
    }
    class JsDataView {
        +int byte_offset
        +int byte_length
        +uint64_t buffer_item
        +bool length_tracking
    }
    Map "MAP_KIND_TYPED_ARRAY" --> JsTypedArray : data when data_cap==0
    Map "MAP_KIND_ARRAYBUFFER" --> JsArrayBuffer : data when data_cap==0
    Map "MAP_KIND_DATAVIEW" --> JsDataView : data when data_cap==0
    JsTypedArray --> JsArrayBuffer : buffer
    JsTypedArray --> ArrayNum : view (refreshed before every access)
    ArrayNum --> ArrayNumShape : extra
    ArrayNumShape --> Map : base = buffer's wrapper Map (GC root)
    JsDataView --> JsArrayBuffer : buffer
    note for JsTypedArray "length/byteOffset derive from the view: length = view->length, byteOffset = shape->offset * elem_size. No cached data pointer."
    note for Map "data_cap==0 means native-backed. First user property write upgrades to a real shape and stows the native pointer under __ta__ / __ab__ / __dv__."
